# music-hackspace-developer-lab

./: .gitignore  LICENSE  README.md
session-1/: Potential Course Topics.key
session-3/UITutorial/: UITutorial.jucer
session-3/UITutorial/Source/: PluginEditor.cpp  SliderAreaComponent.cpp  SliderAreaComponent.h
session-4/: audio.py
session-4/DSPLearning/Source/: Oscillator.h  PluginEditor.cpp  PluginEditor.h
session-5/: fft.py  filters.py
session-6/ChorusDemo/: ChorusDemo.jucer
session-6/ChorusDemo/Source/: PluginProcessor.h
session-6/ValueTreeExample/: ValueTreeExample.jucer
session-6/ValueTreeExample/Source/: MainComponent.cpp
session-7/ThreadingAudioPlugin/Source/: PluginEditor.cpp  PluginProcessor.cpp
session-8/ChorusDemoWithOSC/: ChorusDemoWithOSC.jucer
session-8/ChorusDemoWithOSC/Source/: OSCProcessor.h  PluginProcessor.h
session-8/unit-testing/: CMakeLists.txt  MusicHelpers.cpp  MusicHelpers.h
session-9/LookAndFeelDemo/: LookAndFeelDemo.jucer
session-9/LookAndFeelDemo/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
week-2/C++ and Debugging/C++ and Debugging/: main.cpp
week-2/C++ and Debugging/C++ and Debugging.xcodeproj/: project.pbxproj
week-3/UITutorial/: UITutorial.jucer
week-3/UITutorial/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
week-4/DSPLearning/: DSPLearning.jucer
week-4/DSPLearning/Source/: Oscillator.cpp  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
week-6/ChorusDemo/Source/: PluginEditor.cpp  PluginProcessor.cpp
week-6/ValueTreeExample/Source/: Main.cpp  MainComponent.h
week-7/Threading in Native C++/Threading in Native C++/: main.cpp
week-7/Threading in Native C++/Threading in Native C++.xcodeproj/: project.pbxproj
week-7/ThreadingAudioPlugin/: ThreadingAudioPlugin.jucer
week-7/ThreadingAudioPlugin/Source/: FileLoader.cpp  FileLoader.h  PluginEditor.h  PluginProcessor.h
week-8/ChorusDemoWithOSC/: ChorusDemoWithOSC.jucer
week-8/ChorusDemoWithOSC/Source/: OSCProcessor.cpp  (+3 more)
week-8/unit-testing/: test_MusicHelpers.cpp
(+17 files in other folders)
